# html-entities

./: .travis.yml  CHANGELOG.md  Cargo.toml
gen-entities/: Cargo.toml  entities.json  entities.rs
gen-entities/src/: main.rs
src/: entities.rs  lib.rs
tests/: decode.rs
